# dotfiles

./: .gitignore  AGENTS.md  INSTALL.md  INSTALL2.md  PLAN.md  README.md  configuration.nix  configuration.org  emacs.el  flake.nix  flake1.nix  hardware-configuration.nix  home.nix
documentation/: murph-install.md
emacs/: agent-shell-config.el  completion.el  early-init.el  init.el  language-javascript.el  language-racket.el  language-rust.el  language-tex.el  language-verilog.el  phelps.el  pi-coding-agent-config.el  ui.el
kak/: kakrc
nix/: checks.nix  dev.nix  formatter.nix  nix-config.nix  pkgs.nix  shell.nix  templates.nix
pi/: AGENTS.md  pi-agent-browser-native-package-lock.json  pi-mcp-adapter-package-lock.json  pi-subagents-package-lock.json  pi-web-minimal-package-lock.json
scripts/: backup-murph-convenience.sh  backup-murph-secrets.sh  backup_murph.py  backup_murph_secrets.py  flash-nixos-installer.sh  install-murph.sh  murph_bundles.json  pi-print-system-prompt.mjs  pi-print-system-prompt.ts  restore-murph-convenience.sh  restore-murph-secrets.sh  restore_murph.py  restore_murph_secrets.py
secrets/: README.md  auth-key-linode1.age  context7-api-key.age  exa-api-key.age  linode1-password.age  secrets.nix  share1-admin-password.age  share1-auth-key1.age  share1-nextcloud-admin-password.age  webdav-user1.age  (+1 more)
templates/c/: CMakeLists.txt  CMakePresets.json  flake.nix
templates/c/src/: main.c
templates/cpp/: .gitignore  CMakeLists.txt  flake.nix
templates/cpp/src/: main.cpp
templates/haskell/: .gitignore  flake.nix  haskell-project.cabal
(+112 files in other folders)
