cabal-version: 3.0
name: haskell-project
version: 0.1.0.0
synopsis: Haskell project
description: A Haskell project.
category: Development
license: BSD-3-Clause
author: Jackson Brough
maintainer: jacksontbrough@gmail.com
build-type: Simple

executable haskell-project
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >= 4.18 && < 5
  default-language: GHC2021
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints
